--- a/src/components/Chat/index.module.scss
+++ b/src/components/Chat/index.module.scss
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: center;
   position: relative;
-  height: calc(100vh - 200px);
-  max-width: 768px;
+  height: calc(100vh - 154px);
   margin: 0 auto;
   .generateLink {
     height: fit-content;
@@ -15,11 +14,27 @@
 }
 
 .chatInput {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  position: fixed;
+  bottom: 20px;
+  margin: 0 auto;
 
   button {
     height: 36px;
+  }
+}
+
+@media only screen and (max-width: 1023.98px) {
+  .chatInput {
+    width: calc(100% - 40px);
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .wrapper {
+    height: calc(100vh - 172px);
+  }
+  .chatInput {
+    width: calc(100% - 240px);
+    left: 220px;
   }
 }
